;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (target opcodes.ml)
 (mode   fallback)
 (deps    (:conf ../Makefile.config)
          (:c opcodes.ml.c)
          (:tbl ../runtime/caml/opcodes.h))
 (action
   (with-stdout-to %{target}
     (bash
       "`grep '^CPP=' %{conf} | cut -d'=' -f2` -I ../runtime %{c}"
       ))))
